--- a/wp-content/languages/es_ES.po
+++ b/wp-content/languages/es_ES.po
@@ -1,14 +1,14 @@
-# Translation of Development in Spanish (Spain)
-# This file is distributed under the same license as the Development package.
+# Translation of 4.3.x in Spanish (Spain)
+# This file is distributed under the same license as the 4.3.x package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-08-18 09:02:20+0000\n"
+"PO-Revision-Date: 2015-09-23 09:30:59+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: GlotPress/1.0-alpha-1100\n"
-"Project-Id-Version: Development\n"
+"Project-Id-Version: 4.3.x\n"
 
 #. translators: 'rtl' or 'ltr'. This sets the text direction for WordPress.
 #: wp-includes/locale.php:185
@@ -7278,10 +7278,6 @@ msgstr "Comentarios"
 msgid "Save"
 msgstr "Guardar"
 
-#: wp-includes/script-loader.php:503
-msgid "Save Draft"
-msgstr "Guardar borrador"
-
 #: wp-includes/script-loader.php:502
 msgid "Save as Pending"
 msgstr "Guardar como pendiente"
@@ -7676,6 +7672,10 @@ msgstr "La biblioteca de imágenes GD no está instalada."
 #: wp-includes/media.php:3077
 msgid "No media attachments found."
 msgstr "No se han encontrado adjuntos."
+
+#: wp-includes/script-loader.php:503
+msgid "Save Draft"
+msgstr "Guardar"
 
 #: wp-includes/class-wp-editor.php:884 wp-includes/media-template.php:383
 #: wp-includes/media-template.php:563 wp-includes/revision.php:31
