--- a/wp-content/languages/es_ES.po
+++ b/wp-content/languages/es_ES.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-12-11 13:19:34+0000\n"
+"PO-Revision-Date: 2015-12-11 20:42:49+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -61,7 +61,7 @@ msgstr "<strong>ERROR</strong>: %1$s en %2$s solo puede contener números, letra
 
 #: wp-includes/script-loader.php:571
 msgid "Changes saved."
-msgstr "Cambios guardados"
+msgstr "Cambios guardados."
 
 #. translators: %s: Codex URL
 #: wp-load.php:82
